--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chat-ui/vue3": "^1.0.11",
     "@mdi/font": "7.2.96",
     "chart.js": "^4.2.1",
     "roboto-fontface": "*",
