😼 ANIMATION IS SO COOL!!

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@chat-ui/vue3": "^1.0.11",
     "@mdi/font": "7.2.96",
     "chart.js": "^4.2.1",
+    "gsap": "^3.11.5",
     "roboto-fontface": "*",
+    "uuid": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.14",
